--- a/scss/_formulario.scss
+++ b/scss/_formulario.scss
@@ -25,3 +25,9 @@ button {
 		background-color: $background-color_2;
 	}
 }
+
+.formulario {
+    display: flex;
+    justify-content: center;
+	background-color:cornflowerblue;
+}
