--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -7,6 +7,8 @@
 @import"contacto";
 @import"variables";
 @import"formulario";
-@import"botonwhatsapp"
+@import"botonwhatsapp";
+@import"mediaquery";
+
 
 
