--- a/scss/_barranavegador.scss
+++ b/scss/_barranavegador.scss
@@ -5,23 +5,47 @@ $background-color_2: #111;
 .navBarra {
 	background-color: $background-color_1;
 	height: 50px;
-}
-.ulBarra {
+  }
+  
+  .ulBarra {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-}
-.liBarra {
+  }
+  
+  .liBarra {
 	float: left;
-	a {
-		display: block;
-		color: $color_1;
-		text-align: center;
-		padding: 16px;
-		text-decoration: none;
-		&:hover {
-			background-color: $background-color_2;
-		}
+  }
+  
+  .liBarra a {
+	display: block;
+	color: $color_1;
+	text-align: center;
+	padding: 16px;
+	text-decoration: none;
+  }
+  
+  .liBarra a:hover {
+	background-color: $background-color_2;
+  }
+  
+  @media screen and (max-width: 768px) {
+	.ulBarra {
+	  flex-direction: column;
+	  align-items: stretch;
 	}
-}
+  
+	.liBarra {
+	  margin-bottom: 0.5rem;
+	  float: none;
+	}
+  
+	.liBarra a {
+	  padding: 0.5rem;
+	}
+  }
+  
+  
+  
+  
